<resources>
    <string name="app_name">WeatherMon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="weathermon_please_log_in">WeatherMon! \n Please Log in</string>
    <string name="card_here">Card here</string>
    <string name="my_pet_weathermon">My pet weathermon</string>
    <string name="train_weathermon">Train Weathermon</string>
    <string name="campaign">Campaign</string>
    <string name="the_weathermon">The Weathermon</string>
    <string name="administration">Administration</string>
    <string name="change_user_password">Change User Password</string>
    <string name="make_admin">Make Admin</string>
    <string name="delete_user">Delete User</string>
    <string name="create_user">Create User</string>
    <string name="back_to_main_page">Back to Main Page</string>
    <string name="get_weathermon">Get Weathermon</string>
    <string name="logout">Logout</string>
    <string name="weathermon_dictionary">Weathermon Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome To</string>
    <string name="arena_name"><![CDATA[<---arena name --->]]></string>
    <string name="arena">Arena!</string>
    <string name="temperature_boost_image">Temperature Boost Image</string>
    <string name="light_or_dark_boost_image">Light or Dark boost image</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_20_mph">20 mph</string>
    <string name="_100">100 %</string>
    <string name="humidity">Humidity</string>
    <string name="start_training_combat">Start Training Combat!</string>
    <string name="choose_new_location">Choose new location</string>
    <string name="we_have_a_winner">We have a winner!</string>
    <string name="next">Next</string>
    <string name="travel_to_a_new_location">Travel to a New Location</string>
    <string name="start_the_battle">Start the Battle!</string>
</resources>