<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity"
    android:background="@drawable/weathermon">

    <ImageButton
        android:id="@+id/createUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/buttoncreateuser"
        android:background="@android:color/transparent"
        android:contentDescription="@string/create_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp" />

    <ImageButton
        android:id="@+id/deleteUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/buttondeleteuser"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_user"
        app:layout_constraintTop_toBottomOf="@id/createUserButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <ImageButton
        android:id="@+id/makeAdminButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/buttonmakeauseranadmin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/make_admin"
        app:layout_constraintTop_toBottomOf="@id/deleteUserButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <ImageButton
        android:id="@+id/changePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/buttonchangeauserpassword"
        android:background="@android:color/transparent"
        android:contentDescription="@string/change_user_password"
        app:layout_constraintTop_toBottomOf="@id/makeAdminButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
