<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.LocationSelectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/arenaNameIDTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arena_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="5dp" />


        <!--temperature-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#DDDDDD"
            android:layout_margin="8dp"
            android:padding="2dp"
        >
        <ImageView
            android:id="@+id/tempBoostImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/temperature_boost_image"
            android:src="@drawable/temphot"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="Temperature:"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tempBoostTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="90 °F"
                android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <!--NightDay-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#DDDDDD"
            android:layout_margin="8dp"
            android:padding="2dp"
            >
            <ImageView
                android:id="@+id/lightDarkBoostImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/light_or_dark_boost_image"
                android:src="@drawable/daytimebonus"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="Time of day"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/dayOrNightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="Daytime"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <!--Wind Bonus-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#DDDDDD"
            android:layout_margin="8dp"
            android:padding="2dp"
            >
            <ImageView
                android:id="@+id/windBonus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="Windy bonus or calm no bonus"
                android:src="@drawable/windybonus"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/wind_speed"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/windBonusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/_20_mph"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <!--Hummidity Bonus-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#DDDDDD"
            android:layout_margin="8dp"
            android:padding="2dp"
            >
            <ImageView
                android:id="@+id/humidityBonusImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/light_or_dark_boost_image"
                android:src="@drawable/humiditybonus"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/humidity"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/humidityBonusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/_100"
                    android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</FrameLayout>