<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/weathermon">


    <ImageView
        android:id="@+id/titleLoginImageView"
        android:layout_width="match_parent"
        android:layout_height="260dip"
        android:layout_margin="60dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/weathermonlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="75dip"
        android:layout_margin="16dip"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLoginImageView" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="75dip"
        android:layout_margin="16dip"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="24sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="105dip"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginEditText"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




        

</androidx.constraintlayout.widget.ConstraintLayout>